--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "personal-budget",
   "version": "1.0.0",
   "description": "a way for you to organize your finances",
-  "main": "index.js",
+  "source": "index.html",
   "scripts": {
-    "start": "node index.js"
+    "dev": "parcel"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,14 @@
   "bugs": {
     "url": "https://github.com/Pedrocanoas/personal-budget/issues"
   },
-  "homepage": "https://github.com/Pedrocanoas/personal-budget#readme"
+  "homepage": "https://github.com/Pedrocanoas/personal-budget#readme",
+  "devDependencies": {
+    "@parcel/transformer-sass": "^2.6.2",
+    "bootstrap": "^5.1.3",
+    "parcel": "^2.6.2",
+    "sass": "^1.53.0"
+  },
+  "dependencies": {
+    "node-sass": "^7.0.1"
+  }
 }
